deploy/k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecafe-api
  namespace: ecafe
spec:
  selector:
    app: ecafe-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
