deploy/k8s/api/ingress.example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecafe-api
  namespace: ecafe
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.ecafe.example
      secretName: ecafe-api-tls
  rules:
    - host: api.ecafe.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecafe-api
                port:
                  number: 80
